Cleaned up a bunch of junk in connectMVCI. It is now readay to start implementing